Verify live end-to-end agentic run over Bedrock
Full stack confirmed: frontend WS client -> production daemon -> real ioa-agent ->
Clair -> Bedrock (openai.gpt-oss-120b) -> tool calls -> typed protocol -> three-zone UX.
Credential probe returns PONG; agent run streams real tool-call cards + analysis;
frontend shows Completed + real token count (screenshot in docs).

AGENT-MODE.md: documented the production-jar launch (quarkusDev's isolated classloader
can't see base/plot for the vendored ioa-agent jar -> use the built quarkus-run.jar).